jump to section track fix

--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,7 @@
 
   pointer-events: auto;
 }
+
+.hidden {
+  display: none;
+}
